feat: authentication and authorization with keycloak (#42)
* feat: remove spring web flux and add spring web mvc

* feat: user repository unit tests working

* ci: autogenerated JaCoCo coverage badge

* doc: update readme to remove web flux

* feat: add authorization and authentication handlers

* feat: integration tests passing with mocked user and authentication

* feat: add documentation to security config class

* feat: add jwt client roles from auth - partial

* feat: handle roles from jwt decoded token

* ci: add variable to keycloak server and workflow update

* ci: fix missing keycloak server realm env var

* fix: build service image with keycloak server variable

* feat: add docker build args env var

* feat: add cors handling to spring security

* feat: correct version from main

* feat: remove run-with-bd script

* feat: add service authority to enable read and write from testing

* doc: add steps to build and run with docker and docker-compose

* feat: remove argument from docker image build

* feat: remove docker build args from the workflow

* feat: improve security config and enable csrf

* feat: add csrf handler

* feat: improve application properties file organization

* feat: collectors to list code smell related to immutability

* feat: remove unused import

* feat: improve keycloak realm variable name

Co-authored-by: Ci Bot <cibot@users.noreply.github.com>

--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -13,6 +13,7 @@ on:
 env:
   REGISTRY: ghcr.io
   NAME: nrbestapi
+  KEYCLOAK_REALM_URL: ${{ secrets.KEYCLOAK_REALM_URL }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -364,6 +365,7 @@ jobs:
             -p SERVICE_NAME=${{ secrets.SERVICE_NAME }} \
             -p DATABASE_USER=${{ secrets.DATABASE_USER }} \
             -p DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }} \
+            -p KEYCLOAK_REALM_URL=${{ secrets.KEYCLOAK_REALM_URL }} \
             -p PROMOTE=${{ github.repository }}:${{ env.ZONE }}-service-api | oc apply -f -
 
           # Follow any active rollouts (see deploymentconfigs)
